Various cleanups in cluster-operator tests (#9284)
Signed-off-by: Mickael Maison <mickael.maison@gmail.com>